fix vertical alignment of action buttons on index page

--- a/src/main/resources/public/style.css
+++ b/src/main/resources/public/style.css
@@ -80,7 +80,6 @@ h1, h2 {
 .row {
     display: flex;
     gap: var(--gap);
-    align-items: center;
 }
 
 .row.grow > *:first-child {
